[package]
name = "rust-chain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bs58 = "0.5.0"
clap = { version = "4.5.2", features = ["derive"] }
hex = "0.4.3"
num-bigint = "0.4.4"
p256 = { version = "0.13.2", features = ["ecdsa-core"] }
ripemd = "0.1.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_bytes = "0.11.14"
sha2 = "0.10"
sled = "0.34.7"

[profile.release]
opt-level = 3
